mais entradas bibliograficas

--- a/music-harmony-and-theory.bib
+++ b/music-harmony-and-theory.bib
@@ -1,3 +1,124 @@
+@book{beethoven70:complete,
+  author =       {L. V. Beethoven},
+  title =        {Complete String Quartets},
+  year =         1970,
+  publisher =    {New York: Dover Publications}
+}
+
+@article{willner96:more,
+  title =        {More on Handel and the Hemiola: Overlapping
+                  Hemiolas},
+  volume =       2,
+  number =       3,
+  author =       {Channan Willner},
+  journal =      {Music Theory On-Line},
+  year =         1996,
+}
+
+@inbook{oliveira94:musica,
+  author =       {Jamary Oliveira},
+  chapter =      {Pseudópodes II},
+  title =        {A Música de Jamary Oliveira: Estudos Analíticos},
+  year =         1994,
+  publisher =    {Porto Alegre: setor gráfico do CPG-música/UFRGS}
+}
+
+@book{kramer88:time,
+  author =       {Jonathan D. Kramer},
+  title =        {The Time of Music},
+  publisher =    {New York: Schirmer Books},
+  year =         1988
+}
+
+@book{lerdahl.ea90:generative,
+  author =       {Fred Lerdahl and Ray Jackendoff},
+  title =        {A Generative Theory of Tonal Music},
+  year =         1990,
+  publisher =    {Massachusetts: MIT Prees series}
+}
+
+@article{taylor97:chopin,
+  author =       {Stephen A. Taylor},
+  title =        {Chopin, Pygmies, and Tempo Fugue: Ligeti's 'Automne
+                  a Varsovie'},
+  journal =      {Music Theory On-Line},
+  volume =       3,
+  number =       3,
+  year =         1997,
+}
+
+@article{london93:loud,
+  volume =       0,
+  title =        {Loud Rests and Other Strange Metric},
+  author =       {Justin London},
+  year =         1993,
+  number =       2,
+  journal =      {Music Theory On-Line}
+}
+
+@article{roeder97:review,
+  author =       {John Roeder},
+  title =        {Review of Christopher F. Hasty, Meter as rhythm},
+  journal =      {Musis Theory Online},
+  year =         1997,
+  volume =       3,
+  number =       1
+}
+
+@article{renwick94:subject,
+  volume =       0,
+  title =        {'A Subject of Four Notes': William Crotch's
+                  Experiment in Motivic Saturation},
+  number =       10,
+  year =         1994,
+  journal =      {Music Theory On-Line},
+  author =       {Renwick, William, J.}
+}
+
+@book{schonberg86:pelleas,
+  author =       {Arnold Schönberg},
+  title =        {Pelleas und Mellisande},
+  year =         1986,
+  publisher =    {New York: Dover Publications}
+}
+
+@Article{ferris59:evolution,
+  author       = {Joan Ferris},
+  title        = {The Evolution of Rameau's Harmonic Theories},
+  journal      = jmt,
+  year         = 1959,
+  volume       = 3,
+  number       = 2,
+  pages        = {231--256}
+}
+
+@InCollection{sadler02:jean,
+  author       = {Graham Sadler and Thomas Christensen},
+  title        = {Jean-Philippe Rameau},
+  booktitle    = groveol,
+  publisher    = {Macmillan Publishers},
+  year         = 2002,
+  editor       = {Laura Macy},
+  note         = {\url{www.grovemusic.com}}
+}
+
+@Book{shirlaw70:theory,
+  author       = {Matthew Shirlaw},
+  title        = {The Theory of Harmony},
+  publisher    = {Dr. Birchard Coar},
+  address      = {Sarasota, Florida},
+  year         = 1970
+}
+
+@Article{waesberghe51:guido,
+  author       = {Jos. Smits van Waesberghe},
+  title        = {Guido of Arezzo and Musical Improvisation},
+  journal      = {Disciplina Musica},
+  year         = 1951,
+  volume       = 5,
+  pages        = {55-63}
+}
+
 @Misc{            adams,
   author        = {Ricci Adams},
   title         = {Musictheory.net},
