--- a/programs.bib
+++ b/programs.bib
@@ -1,3 +1,265 @@
+@Manual{	  bartetzki:cmask,
+  title =        {CMask a stochastic event generator for Csound},
+  author =       {Andre Bartetzki},
+  month =        jul,
+  year =         1997,
+  url =
+                  {http://www.kgw.tu-berlin.de/~abart/CMaskMan/CMask-Manual.htm},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{bianchini02:csgraph,
+  title =        {CSGraph},
+  author =       {Riccardo Bianchini},
+  year =         2002,
+  url =          {http://www.geocities.com/Heartland/Acres/4768/},
+  lastaccess =   {2002-11-27}
+}
+
+@Manual{	  blasser:rocky,
+  title =        {Rocky},
+  author =       {Peter Blasser},
+  year =         1999,
+  url =          {http://www.oberlin.edu/~pblasser/rocky.html},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  brinkman:score11,
+  title =        {Score11 },
+  author =       {Alexander R. Brinkman},
+  year =         2000,
+  url =          {http://www.esm.rochester.edu/download.html},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  burton.piche:cecilia,
+  title =        {Cecilia},
+  author =       {Alexandre Burton and Jean Piché},
+  year =         1998,
+  url =
+                  {http://www.musique.umontreal.ca/electro/CEC/index.html},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  burton.piche:cybil,
+  title =        {The Cybil Composition Language},
+  author =       {Alexandre Burton and Jean Piché},
+  year =         1998,
+  url =
+                  {http://www.musique.umontreal.ca/electro/CEC/man/cybil.html},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{comajuncosas02:directhammond,
+  title =        {DirectHammond v1/v2 },
+  author =       {Josep M. Comajuncosas},
+  url =          {http://www.csounds.com/jmc/index.htm},
+  lastaccess =   {2002-12-11},
+  year =         2002
+}
+
+@Manual{comajuncosas02:jcm,
+  title =        {JCM Strings},
+  author =       {Josep M. Comajuncosas},
+  url =          {http://www.csounds.com/jmc/index.htm},
+  lastaccess =   {2002-12-11},
+  year =         2002
+}
+
+@Manual{comajuncosas02:jcn,
+  title =        {JCN Synthesis Tutorial},
+  author =       {Josep M. Comajuncosas},
+  url =          {http://www.csounds.com/jmc/index.htm},
+  lastaccess =   {2002-12-11},
+  year =         2002
+}
+
+@Manual{comajuncosas02:voxdream,
+  title =        {VoxDream},
+  author =       {Josep M. Comajuncosas},
+  url =          {http://www.csounds.com/jmc/index.htm},
+  lastaccess =   {2002-12-11},
+  year =         2002
+}
+
+@Manual{	  cooke:rytmo,
+  title =        {Rytmo},
+  author =       {Andrew Cooke},
+  year =         2001,
+  url =
+                  {http://www.andrewcooke.free-online.co.uk/jara/rytmo/index.html},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  coul:scala,
+  title =        {Scala},
+  author =       {Coul, Manuel Op de},
+  month =        apr,
+  year =         2001,
+  url =          {http://www.xs4all.nl/~huygensf/scala/},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  debril.lemoine:hpkcomposer,
+  title =        {HPKComposer, a 3D Art composition tool for Csound },
+  author =       {Didier Debril and Jean-Pierre Lemoine},
+  month =        jun,
+  year =         2000,
+  url =          {http://perso.libertysurf.fr/hplank/hpkcomposer.html},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  gogins:silence,
+  title =        {Silence},
+  author =       {Michael Gogins},
+  year =         2000,
+  url =          {http://www.pipeline.com/~gogins/},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  hanna:mother,
+  title =        {Mother},
+  author =       {Arne Hanna},
+  month =        may,
+  year =         1999,
+  url =          {http://www.geocities.com/SiliconValley/Peaks/3346/},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  haslam:soundspace,
+  title =        {SoundSpace},
+  author =       {Haslam},
+  url =
+                  {http://www.washington.edu/cartah/soundspace/index.html},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{kuehn01:manual,
+  title =        {The nGen Manual},
+  author =       {Mikel Kuehn},
+  organization = {Bowling Green State University},
+  year =         2001
+}
+
+@Manual{klyon:bashfest,
+  title =        {BashFest---A drum machine simulator},
+  author =       {Eric Lyon},
+  month =        feb,
+  year =         1996,
+  url =
+                  {http://ringo.sfc.keio.ac.jp/~eric/bashfest/bashfest.html},
+  lastaccess =   {2001-04-10}
+}
+
+@TechReport{	  miranda:chaosynth,
+  author =       {Eduardo Reck Miranda},
+  title =        {Chaosynth},
+  institution =  {Laboratório de Música Eletroacústica de Santa Maria},
+  year =         1997,
+  month =        jul,
+  url =
+                  {\url{http://www.geocities.com/SiliconValley/Network/6537/ChaosWeb/epcc_project.html}},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  pbd:quasimodo,
+  title =        {Quasimodo},
+  author =       {Paul Barton-Davis},
+  year =         2001,
+  url =          {http://quasimodo.org/},
+  lastaccess =   {2001-04-29}
+}
+
+@Manual{perry:visual,
+  title =        {Visual Orchestra},
+  author =       {David Perry},
+  year =         2002,
+  url =          {http://www2.hku.nl/~perry/visorc/home.htm},
+  lastaccess =   {2002-11-27}
+}
+
+@Manual{	  peter-heeren:jcself,
+  title =        {JCself: a generator for Csound using a stochastic
+                  method},
+  author =       {Nils Kay and Peter Heeren},
+  month =        jul,
+  year =         2000,
+  url =          {http://www.peter-heeren.de/jcself/man.htm},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  puxeddu:csfe,
+  title =        {CSFE: a Python/Tk CSound front-end},
+  author =       {Maurizio Umberto Puxeddu},
+  year =         2001,
+  url =          {http://web.tiscalinet.it/mupuxeddu/},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  puxeddu:pmask,
+  title =        {PMask: a Python implementation of CMask},
+  author =       {Maurizio Umberto Puxeddu},
+  month =        dec,
+  year =         2000,
+  url =
+                  {http://web.tiscalinet.it/mupuxeddu/csound/index.html},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  ramsdell:scheme,
+  title =        {Scheme Score---transform Csound score files using
+                  Scheme},
+  author =       {John D. Ramsdell},
+  month =        jan,
+  year =         2001,
+  url =
+                  {http://www.ccs.neu.edu/home/ramsdell/tools/scmscore/scmscore.html},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  shepard:drumachine,
+  title =        {Drumachine},
+  author =       {Toby Shepard },
+  month =        mar,
+  year =         1997,
+  url =          {http://moat.tobiah.org/pub/drumachine/},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  shepard:perlscore,
+  title =        {Perlscore},
+  author =       {Toby Shepard},
+  month =        aug,
+  year =         1999,
+  url =          {http://moat.tobiah.org/pub/perlscore/},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  songlab:midi2cs,
+  title =        {Midi2Cs},
+  author =       {SongLab},
+  year =         1997,
+  url =          {http://home.snafu.de/rubo/songlab/midi2cs/},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  winkler:pysco,
+  title =        {Pysco},
+  author =       {Paul M. Winkler},
+  month =        jul,
+  year =         2000,
+  url =          {http://www.slinkp.com/},
+  lastaccess =   {2001-04-10}
+}
+
+@Manual{	  winkler:smake,
+  title =        {Smake},
+  author =       {Paul M. Winkler},
+  month =        jul,
+  year =         2000,
+  url =          {http://www.slinkp.com/},
+  lastaccess =   {2001-04-10}
+}
 
 @Misc{            baudis,
   author        = {Petr Baudis},
