Corrige título da dissertação

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -497,7 +497,8 @@
 
 @MastersThesis{   sampaio08:em,
   author        = {{Marcos da Silva} Sampaio},
-  title         = {Em torno da romã: aplicações de operações de contornos na composição musical},
+  title         = {Em torno da romã: aplicações de operações de
+                  contornos na composição},
   school        = {Escola de Música da Universidade Federal da Bahia},
   year          = 2008,
   address       = {Salvador, BA},
