--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -502,7 +502,7 @@
   school        = {Escola de Música da Universidade Federal da Bahia},
   year          = 2008,
   address       = {Salvador, BA},
-  note          = {Dissertação aguardando defesa}
+  month         = {November}
 }
 
 @Article{         schmuckler99:testing,
