Insere dissertação sobre missa palestrina

--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -135,3 +135,13 @@ quantitative approach},
   author        = {Ernö Lendvai},
   address       = {London}
 }
+
+@MastersThesis{   moore06:missa,
+  author        = {Michael J. Moore},
+  title         =  Missa Papae Marcelli: A Comparative Analysis of the
+                  Kyrie and Gloria Movements of Giovanni Pierluigi da
+                  Palestrina and an Adaptation by Giovanni Francesco
+                  Anerio},
+  school        = {University of North Texas},
+  year          = 2006,
+  file          = {moore06:missa.pdf}
