--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -144,4 +144,5 @@ quantitative approach},
                   Anerio},
   school        = {University of North Texas},
   year          = 2006,
-  file          = {moore06:missa.pdf}
+  file          = {moore06:missa.pdf},
+  url           = {http://digital.library.unt.edu/permalink/meta-dc-5257:1}}
