--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -138,7 +138,7 @@ quantitative approach},
 
 @MastersThesis{   moore06:missa,
   author        = {Michael J. Moore},
-  title         =  Missa Papae Marcelli: A Comparative Analysis of the
+  title         = {Missa Papae Marcelli: A Comparative Analysis of the
                   Kyrie and Gloria Movements of Giovanni Pierluigi da
                   Palestrina and an Adaptation by Giovanni Francesco
                   Anerio},
