--- a/music-analysis.bib
+++ b/music-analysis.bib
@@ -145,4 +145,5 @@ quantitative approach},
   school        = {University of North Texas},
   year          = 2006,
   file          = {moore06:missa.pdf},
-  url           = {http://digital.library.unt.edu/permalink/meta-dc-5257:1}}
+  url           = {http://digital.library.unt.edu/permalink/meta-dc-5257:1}
+}
