--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -106,6 +106,18 @@
                   examined.}
 }
 
+@InBook{          dallin74:techniques,
+  author        = {Leon Dallin},
+  title         = {Techniques of Twentieth-Century Composition: A
+                  Guide to the Materials of Modern Music},
+  chapter       = {Melodic Contour and Organization},
+  publisher     = {WM. C. Brown Company Publishers},
+  year          = 1974,
+  address       = {Dubuque, Iowa},
+  edition       = {3},
+  pages         = {4--18}
+}
+
 @Article{         dowling94:melodic,
   author        = {W. Jay Dowling},
   title         = {Melodic contour in hearing and remembering melodies},
