Insere dallin e messiaen

--- a/composition.bib
+++ b/composition.bib
@@ -27,6 +27,16 @@
   author        = {David Cope}
 }
 
+@Book{            dallin74:techniques,
+  author        = {Leon Dallin},
+  title         = {Techniques of Twentieth Century Composition: A
+                  Guide to the Materials of Modern Music},
+  publisher     = {WM. C. Brown Company Publishers},
+  year          = 1974,
+  address       = {Dubuque, Iowa},
+  edition       = 3
+}
+
 @Book{            delone.ea75:aspects,
   title         = {Aspects of Twentieth-Century Music},
   publisher     = {Prentice-Hall},
@@ -79,6 +89,14 @@
   year          = {1989},
   publisher     = {W.W. Norton \& Company},
   isbn          = {978-0393957624}
+}
+
+@Book{            messiaen44:technique,
+  author        = {Olivier Messiaen},
+  title         = {Technique de mon Langage Musical},
+  publisher     = {Alphonse Leduc},
+  year          = 1944,
+  address       = {Paris}
 }
 
 @Book{            schillinger46:schillinger,
