Insere livro de wellington

--- a/orchestration.bib
+++ b/orchestration.bib
@@ -71,6 +71,16 @@
   address       = {New York}
 }
 
+@Book{            gomes02:grupo,
+  author        = {Wellington Gomes},
+  title         = {Grupo de Compositores da Bahia: Estratégias Orquestrais},
+  publisher     = {s.n.},
+  year          = 2002,
+  number        = 3,
+  series        = {Reísa},
+  address       = {Salvador}
+}
+
 @Book{            hopkins93:sounds,
   title         = {Sounds of the Orchestra},
   publisher     = {Oxford University Press},
