--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -490,6 +490,17 @@
   file          = {quinn97:fuzzy.pdf}
 }
 
+@Article{         quinn99:combinatorial,
+  author        = {Ian Quinn},
+  title         = {The combinatorial model of pitch contour},
+  journal       = {Music Perception},
+  year          = 1999,
+  volume        = 16,
+  number        = 3,
+  pages         = {439--56},
+  month         = {Spring}
+}
+
 @Article{         roy.ea04:contour-based,
   author        = {Roy, Samantra Dutta and Rao, Pao and Galinde, Ameya.S.},
   title         = {Contour-based melody representation: an analytical study},
