Insere fitsioris e conklin 2008

--- a/computational-musicology.bib
+++ b/computational-musicology.bib
@@ -1,3 +1,11 @@
+
+@InProceedings{fitsioris.ea08:parallel,
+  author =       {G. Fitsioris and D. Conklin},
+  title =        {Parallel successions of perfect fifths in the Bach chorales},
+  booktitle = {CIM08: Fourth Conference on Interdisciplinary Musicology},
+  year =      2008,
+  address =   {Thessaloniki, Greece}}
+
 @InCollection{kugel92:beyond,
  author = {Peter Kugel},
  title = {Beyond computational musicology},
