--- a/artificial-inteligence.bib
+++ b/artificial-inteligence.bib
@@ -242,3 +242,29 @@ year=           2007
   year=1993,
   publisher={Department of Computer Science, University of Toronto}
 }
+
+@book{manning.ea08:introduction,
+  title={{Introduction to information retrieval}},
+  author={Manning, Christopher and Raghavan, P. and Schtze, Hinrich},
+  year=2008,
+  publisher={Cambridge University Press New York, NY, USA}
+}
+
+@article{resnik.ea97:perspective,
+  title={{A perspective on word sense disambiguation methods and their evaluation}},
+  author={Resnik, P. and Yarowsky, D.},
+  journal={Tagging Text with Lexical Semantics: Why, What and How},
+  pages={79--86},
+  year=1997
+}
+
+@article{brown.ea90:statistical,
+  title={{A statistical approach to machine translation}},
+  author={Brown, P.F. and Della Pietra, S.A. and Della Pietra, V.J. and Jelinek, F. and Lafferty, J.D. and Mercer, R.L. and Roossin, P.S.},
+  journal={Computational Linguistics},
+  volume=16,
+  number=2,
+  pages={79--85},
+  year=1990,
+  publisher={MIT Press Cambridge, MA, USA}
+}
