--- a/top-mestrado.bib
+++ b/top-mestrado.bib
@@ -35,21 +35,21 @@
   publisher={Springer}
 }
 
-@InProceedings{hotho2003wit,
+@InProceedings{hotho.ea03:wordnet,
   title={{Wordnet improves text document clustering}},
   author={Hotho, A. and Staab, S. and Stumme, G.},
   booktitle={Proc. of the SIGIR 2003 Semantic Web Workshop},
   pages={541--544},
-  year={2003}
+  year=2003
 }
 
-@InProceedings{steinbach2000cdc,
+@InProceedings{steinbach.ea00:comparison,
   title={{A comparison of document clustering techniques}},
   author={Steinbach, M. and Karypis, G. and Kumar, V.},
   booktitle={KDD workshop on text mining},
-  volume={34},
-  pages={35},
-  year={2000}
+  volume=34,
+  pages=35,
+  year=2000
 }
 
 @article{hung.ea04:hybrid,
@@ -139,4 +139,352 @@
   pages={39--41},
   year=1995,
   publisher={ACM New York, NY, USA}
+}
+
+@article{friedman97:bias,
+  title={{On bias, variance, 0/1—loss, and the curse-of-dimensionality}},
+  author={Friedman, J.H.},
+  journal={Data mining and knowledge discovery},
+  volume=1,
+  number=1,
+  pages={55--77},
+  year=1997,
+  publisher={Springer}
+}
+
+@InProceedings{moura.ea08:easily,
+  title={{Easily Labelling Hierarchical Document Clusters}},
+  author={Moura, M.F. and Marcacini, R.M. and Rezende, S.O.},
+ booktitle= {Anais do IV Workshop em Algoritmos e Aplicações de Mineração de Dados no SBBD/SBES} ,
+ year= 2008,
+ pages= {37--45}
+
+}
+
+@book{kowalski97:information,
+  title={{Information retrieval systems: theory and implementation}},
+  author={Kowalski, G.},
+  year=1997,
+  publisher={Kluwer Academic Publishers Norwell, MA, USA}
+}
+
+@article{fisher87:knowledge,
+  title={{Knowledge acquisition via incremental conceptual clustering}},
+  author={Fisher, D.H.},
+  journal={Machine learning},
+  volume=2,
+  number=2,
+  pages={139--172},
+  year=1987,
+  publisher={Springer}
+}
+
+@book{bishop.ea06:pattern,
+  title={{Pattern recognition and machine learning}},
+  author={Bishop, C.M. and SpringerLink (Online service)},
+  year=2006,
+  publisher={Springer New York.}
+}
+
+@article{lloyd82:least,
+  title={{Least squares quantization in PCM}},
+  author={Lloyd, S.},
+  journal={IEEE Transactions on Information Theory},
+  annote={kmeans original},
+  volume=28,
+  number=2,
+  pages={129--137},
+  year=1982
+}
+
+@article{michalski.ea83:learning,
+  title={{Learning from observation: Conceptual clustering}},
+  author={Michalski, R.S. and Stepp, R.E.},
+  journal={Machine Learning: An artificial intelligence approach},
+  volume=1,
+  pages={331--363},
+  year=1983,
+  publisher={Morgan Kaufmann Pub}
+}
+
+@book{michalski80:knowledge,
+  title={{Knowledge acquisition through conceptual clustering: A theoretical framework and an algorithm for partitioning data into conjunctive concepts}},
+  author={Michalski, R.S.},
+  publisher={Department of Computer Science, University of Illinois at Urbana-Champaign},
+  year=1980
+}
+
+@article{everitt79:unresolved,
+  title={{Unresolved problems in cluster analysis}},
+  author={Everitt, BS},
+  journal={Biometrics},
+  pages={169--181},
+  year=1979,
+  publisher={Biometric Society}
+}
+
+@article{maron.ea60:relevance,
+  title={{On relevance, probabilistic indexing and information retrieval}},
+  author={Maron, ME and Kuhns, JL},
+  journal={Journal of the ACM (JACM)},
+  volume=7,
+  number=3,
+  pages={216--244},
+  year=1960,
+  publisher={ACM New York, NY, USA}
+}
+
+@article{lewis98:naive,
+  title={{Naive (Bayes) at forty: The independence assumption in
+                  information retrieval}},
+  author={Lewis, D.D.},
+  journal={Lecture Notes in Computer Science},
+  volume=1398,
+  pages={4--18},
+  year=1998,
+  publisher={Springer}
+}
+
+@book{zhao.ea05:criterion,
+  title={{Criterion functions for document clustering}},
+  author={Zhao, Y. and Karypis, G.},
+  year=2005,
+  publisher={University of Minnesota}
+}
+
+@article{jain.ea99:data,
+  title={{Data clustering: a review}},
+  author={Jain, AK and Murty, MN and Flynn, PJ},
+  journal={ACM computing surveys},
+  volume=31,
+  number=3,
+  year=1999
+}
+
+@article{xu.ea05:survey,
+  title={{Survey of clustering algorithms}},
+  author={Xu, R. and Donald Wunsch, II},
+  journal={IEEE Transactions on Neural Networks},
+  volume=16,
+  number=3,
+  pages=645,
+  year=2005
+}
+
+@article{filippone.ea08:survey,
+  title={{A survey of kernel and spectral methods for clustering}},
+  author={Filippone, M. and Camastra, F. and Masulli, F. and Rovetta, S.},
+  journal={Pattern recognition},
+  volume=41,
+  number=1,
+  pages={176--190},
+  year=2008,
+  publisher={Elsevier}
+}
+
+@article{kettenring06:practice,
+  title={{The practice of cluster analysis}},
+  author={Kettenring, J.R.},
+  journal={Journal of classification},
+  volume=23,
+  number=1,
+  pages={3--30},
+  year=2006,
+  publisher={Springer}
+}
+
+@InProceedings{ng.ea02:spectral,
+  title={{On spectral clustering: Analysis and an algorithm}},
+  author={Ng, A. and Jordan, M. and Weiss, Y.},
+  booktitle={Advances in Neural Information Processing Systems 14: Proceedings of the 2002 Conference},
+  pages=849,
+  year=2002,
+  organization={MIT Press}
+}
+
+@article{maulik.ea00:genetic,
+  title={{Genetic algorithm-based clustering technique}},
+  author={Maulik, U. and Bandyopadhyay, S.},
+  journal={Pattern Recognition},
+  volume=33,
+  number=9,
+  pages={1455--1465},
+  year=2000,
+  publisher={Elsevier}
+}
+
+@article{klein.ea89:experiments,
+  title={{Experiments in projection and clustering by simulated annealing}},
+  author={Klein, R.W. and Dubes, R.C.},
+  journal={Pattern Recognition},
+  volume=22,
+  number=2,
+  pages={213--220},
+  year=1989,
+  publisher={Elsevier}
+}
+
+@book{baeza-yates.ea99:modern,
+  title={{Modern information retrieval}},
+  author={Baeza-Yates, R. and Ribeiro-Neto, B. and others},
+  year=1999,
+  publisher={ACM press New York}
+}
+
+@InProceedings{dhillon01:co,
+  title={{Co-clustering documents and words using bipartite spectral graph partitioning}},
+  author={Dhillon, I.S.},
+  booktitle={Proceedings of the seventh ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={269--274},
+  year=2001,
+  organization={ACM New York, NY, USA}
+}
+
+@article{jain.ea00:statistical,
+  title={{Statistical pattern recognition: A review}},
+  author={Jain, AK and Duin, RPW and Mao, J.},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  volume=22,
+  number=1,
+  pages={4--37},
+  year=2000
+}
+
+
+@InProceedings{almeida.ea08:parallel,
+  title={{Parallel Algorithms for a Visual Text Mining Platform}},
+  author={Almeida, M.O. and Mello, R.F. and Oliveira, M.C.F.},
+  booktitle={Proceedings of the 20th IASTED International Conference},
+  volume=145631,
+  pages=037,
+  year= 2008
+}
+
+@article{mackay92:information,
+  title={{Information-based objective functions for active data selection}},
+  author={MacKay, D.J.C.},
+  journal={Neural Computation},
+  volume=4,
+  number=4,
+  pages={590--604},
+  year=1992,
+  publisher={MIT Press}
+}
+
+@InProceedings{fox89:stop,
+  title={{A stop list for general text}},
+  author={Fox, C.},
+  booktitle={ACM SIGIR Forum},
+  volume=24,
+  number={1-2},
+  pages={19--21},
+  year=1989,
+  organization={ACM New York, NY, USA}
+}
+
+@article{mann1950upn,
+  title={{Unsupervised personal name disambiguation}},
+  author={Mann, G.S. and Yarowsky, D.},
+  journal={birth},
+  pages={6},
+  year={1950}
+}
+
+@article{salton.ea75:vector,
+  title={{A vector space model for automatic indexing}},
+  author={Salton, G. and Wong, A. and Yang, CS},
+  journal={Communications of the ACM},
+  volume=18,
+  number=11,
+  pages={613--620},
+  year=1975,
+  publisher={ACM New York, NY, USA}
+}
+
+@InProceedings{slonim.ea00:document,
+  title={{Document clustering using word clusters via the information bottleneck method}},
+  author={Slonim, N. and Tishby, N.},
+  booktitle={Proceedings of the 23rd annual international ACM SIGIR conference on Research and development in information retrieval},
+  pages={208--215},
+  year=2000,
+  organization={ACM New York, NY, USA}
+}
+
+@InProceedings{pereira.ea93:distributional,
+  title={{Distributional clustering of English words}},
+  author={Pereira, F. and Tishby, N. and Lee, L.},
+  booktitle={Proceedings of the 31st annual meeting on Association for Computational Linguistics},
+  pages={183--190},
+  year=1993,
+  organization={Association for Computational Linguistics Morristown, NJ, USA}
+}
+
+@InProceedings{agirre.ea00:enriching,
+  title={{Enriching very large ontologies using the WWW}},
+  author={Agirre, E. and Ansa, O. and Hovy, E. and Mart{\'\i}nez, D.},
+  booktitle={Proceedings of the First Workshop on Ontology Learning OL'2000},
+  year=2000
+}
+
+@InProceedings{velardi.ea01:using,
+  title={{Using text processing techniques to automatically enrich a domain ontology}},
+  author={Velardi, P. and Fabriani, P. and Missikoff, M.},
+  booktitle={Proceedings of the international conference on Formal Ontology in Information Systems-Volume 2001},
+  pages={270--284},
+  year=2001,
+  organization={ACM New York, NY, USA}
+}
+
+@article{resnik99:semantic,
+  title={{Semantic similarity in a taxonomy: An information-based measure and its application to problems of ambiguity in natural language}},
+  author={Resnik, P.},
+  journal={Journal of artificial intelligence research},
+  year=1999
+}
+
+@InProceedings{wu.ea94:verb,
+  title={{Verb semantics and lexical selection}},
+  author={Wu, Z. and Palmer, M.},
+  booktitle={Proceedings of the 32nd annual meeting of the Association for Computational Linguistics},
+  pages={133--138},
+  year=1994,
+  organization={Las Cruces, New Mexico}
+}
+
+@article{lin.ea04:information,
+  title={{Information assessment on predicting protein-protein interactions}},
+  author={Lin, N. and Wu, B. and Jansen, R. and Gerstein, M. and Zhao, H.},
+  journal={BMC bioinformatics},
+  volume=5,
+  number=1,
+  pages=154,
+  year=2004,
+  publisher={BioMed Central}
+}
+
+@misc{lewis:rtc,
+  title={{Reuters-21578 text categorization test collection,
+                  Distribution 1.0, AT\&T Labs-Research}},
+  author={Lewis, D.}
+}
+
+@inproceedings{ji.ea06:document,
+ author = {Ji,, Xiang and Xu,, Wei},
+ title = {Document clustering with prior knowledge},
+ booktitle = {SIGIR '06: Proceedings of the 29th annual international ACM SIGIR conference on Research and development in information retrieval},
+ year = 2006,
+ isbn = {1-59593-369-7},
+ pages = {405--412},
+ location = {Seattle, Washington, USA},
+ doi = {http://doi.acm.org/10.1145/1148170.1148241},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
+@InProceedings{xing.ea02:distance,
+  title={{Distance metric learning with application to clustering with side-information}},
+  author={Xing, E.P. and Ng, A.Y. and Jordan, M.I. and Russell, S.},
+  booktitle={Advances in Neural Information Processing Systems 14: Proceedings of the 2002 Conference},
+  pages={521--528},
+  year=2002
 }
