--- a/latex/ismir2009.sty
+++ b/latex/ismir2009.sty
@@ -142,8 +142,8 @@ and the full citation on the first page.
 }
 \def\endabstract{\par}
 
-\renewcommand{\thesection}{\arabic{section}.}
-\renewcommand{\thesubsection}{\thesection\arabic{subsection}}
+\renewcommand{\thesection}{\arabic{section}}
+\renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
 \renewcommand{\thesubsubsection}{\thesubsection.\arabic{subsubsection}}
 
 \renewcommand\section{
