--- a/latex/pibic.sty
+++ b/latex/pibic.sty
@@ -41,13 +41,13 @@
   \begin{center}
     \begin{tabular}{ |>{\columncolor[gray]{.8}}p{4cm} | >{}p{12cm}| }
       \hline
-      \texttitulocolor{Título do Projeto} & \texttitulo{#1} \\
+      \texttitulocolor{TÃ­tulo do Projeto} & \texttitulo{#1} \\
       \hline
       \texttitulocolor{Nome do Orientador} & \texttitulo{#2} \\
       \hline
       \texttitulocolor{Grupo de Pesquisa \newline (opcional)} & \texttitulo{#3} \\
       \hline
-      \texttitulocolor{Palavras Chave \newline (até 3)} & \texttitulo{#4} \\
+      \texttitulocolor{Palavras Chave \newline (atÃ© 3)} & \texttitulo{#4} \\
       \hline
       \texttitulocolor{Edital} & \textsf{#5} \\
       \hline
@@ -61,7 +61,7 @@
       >{}p{10cm}|
     }
     \hline
-    \texttitulocolor{Sub-Título do Plano de Trabalho} & \texttitulo{#1} \\
+    \texttitulocolor{Sub-TÃ­tulo do Plano de Trabalho} & \texttitulo{#1} \\
     \hline
     \texttitulocolor{Nome do Bolsista} & \texttitulo{#2} \\
     \hline
@@ -81,8 +81,8 @@
     \begin{minipage}[c]{11cm}
       \begin{center}
         {\large \textbf{UNIVERSIDADE FEDERAL DA BAHIA}} \\
-        \textbf{PRÓ-REITORIA DE PESQUISA E PÓS-GRADUAÇÃO} \\
-        \textbf{\textit{Programa Institucional de Bolsas de Iniciação Científica}} \\
+        \textbf{PRÃ“-REITORIA DE PESQUISA E PÃ“S-GRADUAÃ‡ÃƒO} \\
+        \textbf{\textit{Programa Institucional de Bolsas de IniciaÃ§Ã£o CientÃ­fica}} \\
         \textbf{PIBIC}
       \end{center}
     \end{minipage}\hfill
