--- a/top-mestrado.bib
+++ b/top-mestrado.bib
@@ -488,3 +488,55 @@
   pages={521--528},
   year=2002
 }
+
+@InProceedings{chambers.ea08:unsupervised,
+ title={Unsupervised Learning of Narrative Event Chains},
+ author={Nathanael Chambers and Dan Jurafsky},
+ year=2008,
+ booktitle={Proceedings of ACL/HLT 2008}
+}
+
+@article{porter80:algorithm,
+  title={An algorithm for suffix stripping},
+  author={Porter, MF},
+  journal={Program},
+  number=14,
+  volume=3,
+  year=1980,
+  pages={130--137}
+}
+
+@Book{frank.ea99:data,
+  title={{Data Mining: Practical machine learning tools and techniques with Java implementations}},
+  author={Frank, E. and Witten, I.H.},
+  year=1999,
+  publisher={Morgan Kaufmann}
+}
+
+@InProceedings{loper.ea02:nltk,
+  title={{Nltk: The natural language toolkit}},
+  author={Loper, E. and Bird, S.},
+  booktitle={Proceedings of the ACL Workshop on Effective Tools and Methodologies for Teaching Natural Language Processing and Computational Linguistics},
+  pages={62--69},
+  year=2002
+}
+
+@article{leacock.ea98:using,
+  title={{Using corpus statistics and WordNet relations for sense identification}},
+  author={Leacock, C. and Miller, G.A. and Chodorow, M.},
+  journal={Computational Linguistics},
+  volume=24,
+  number=1,
+  pages={147--165},
+  year=1998,
+  publisher={MIT Press Cambridge, MA, USA}
+}
+
+@InProceedings{kanungo.ea02:local,
+  title={{A local search approximation algorithm for k-means clustering}},
+  author={Kanungo, T. and Mount, D.M. and Netanyahu, N.S. and Piatko, C.D. and Silverman, R. and Wu, A.Y.},
+  booktitle={Proceedings of the eighteenth annual symposium on Computational geometry},
+  pages={10--18},
+  year=2002,
+  organization={ACM New York, NY, USA}
+}
