add reference to humdrum review

--- a/computer-music.bib
+++ b/computer-music.bib
@@ -1700,3 +1700,13 @@
   year =         2008,
   volume =    2}
 
+@Article{wild96:humdrum,
+	author = {Wild, Jonathan  },
+	journal = {Music Theory Online},
+	month = {November},
+	number = {7},
+	title = {A Review of the Humdrum Toolkit: UNIX Tools for Musical Research, created by David Huron},
+	volume = {2},
+	year = {1996}
+}
+
