--- a/coding.bib
+++ b/coding.bib
@@ -30,3 +30,10 @@
   number        = 2,
   file          = {jamary-CEM02103.pdf}
 }
+
+@InProceedings{clements80:musical,
+  author =       {Peter J. Clements},
+  title =        {Musical data structures in a multi-use environment},
+  booktitle = {Proceedings of the 1980 International Computer Music Conference},
+  pages =     {231--244},
+  year =      1980}
