add pullinger paper

--- a/coding.bib
+++ b/coding.bib
@@ -37,3 +37,10 @@
   booktitle = {Proceedings of the 1980 International Computer Music Conference},
   pages =     {231--244},
   year =      1980}
+
+@Unpublished{pullinger.ea07:computer,
+  author =       {Stuart Pullinger and Nicholas Bailey and Graham Hair},
+  title =        {A Computer Representation of Pitch Based on the Spiral of Fifths},
+  note =         {This is a pdf presentation available at the internet},
+  url =          {www.n-ism.org/Papers/Nick_Bailey/spiral5ths_slides.pdf},
+  year =      2007}
