--- a/dictionary.bib
+++ b/dictionary.bib
@@ -7,3 +7,12 @@
   publisher     = {Objetiva},
   address       = {Rio de Janeiro}
 }
+
+@Misc{webster09:algorithm,
+  title =     {Algorithm},
+  howpublished = {Merriam Webster Online Dictionary},
+  month =     {Junho},
+  year =      2009,
+  note =      {\url{http://www.merriam-webster.com/dictionary/algorithm}}
+}
+
