--- a/dictionary.bib
+++ b/dictionary.bib
@@ -9,6 +9,7 @@
 }
 
 @Misc{webster09:algorithm,
+  key =           {Merrian Webster Online Dictionary},
   title =     {Algorithm},
   howpublished = {Merriam Webster Online Dictionary},
   month =     {Junho},
