Insere artigo computer-aided composition

--- a/computer-music.bib
+++ b/computer-music.bib
@@ -10,6 +10,15 @@
   where        = {e401-1990-028-01-000004-1-32.pdf, paper}
 }
 
+@Misc{anders03:composing,
+  author =    {Torsten Anders},
+  title =     {Composing Music by Composing Rules: Computer Aided
+                  Composition employing Constraint Logic Programming},
+  year =      2003,
+  note =      {Disponível em
+                  \url{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.101.2821&rep=rep1&type=url&i=0}}
+}
+
 @Article{anderson86:accurately,
   author       = {David P. Anderson and Ron Kuivila},
   title        = {Accurately timed generation of discrete musical
