--- a/music-tempo.bib
+++ b/music-tempo.bib
@@ -1,5 +1,25 @@
 
-@Book{cooper.ea60,
+@InBook{caplin02:theories,
+  author =    {William E. Caplin},
+  editor =    {Thomas Christensen},
+  title =        {The Cambridge History of Western Music Theory},
+  chapter =      {Theories of musical rhythm in the eighteenth and
+                  nineteenth centuries},
+  publisher =    {Cambridge University Press},
+  year =         2002,
+  address =   {Cambridge; New York},
+  pages =     {657--694}
+}
+
+@Book{christensen02:cambridge,
+  editor =    {Thomas Christensen},
+  title =        {The Cambridge History of Western Music Theory},
+  publisher =    {Cambridge University Press},
+  year =         2002,
+  address =   {Cambridge; New York}
+}
+
+@Book{cooper.ea60:rhythmic,
   author =    {Grosvenor Cooper and Leonard B Meyer},
   title =        {The rhythmic structure of music},
   publisher =    {University of Chicago Press},
@@ -7,3 +27,14 @@
   address =   {Chicago}
 }
 
+@InBook{london02:rhythm,
+  author =    {Justin London},
+  editor =    {Thomas Christensen},
+  title =        {Rhythm in twentieth-century theory},
+  chapter =      {Theories of musical rhythm in the eighteenth and
+                  nineteenth centuries},
+  publisher =    {Cambridge University Press},
+  year =         2002,
+  address =   {Cambridge; New York},
+  pages =     {695--725}
+}
