Insere livro e corrige

--- a/music-tempo.bib
+++ b/music-tempo.bib
@@ -27,14 +27,34 @@
   address =   {Chicago}
 }
 
-@InBook{london02:rhythm,
+@InCollection{london02:rhythm,
+  author =       {Justin London},
+  title =        {Rhythm},
+  booktitle =    {Grove Music},
+  publisher = {Oxford University Press},
+  year =      2002,
+  editor =    {Laura Williams Macy},
+  annote =    {Disponível em \url{http://www.grovemusic.com/}}
+}
+
+@InBook{london02:rhythm-1,
   author =    {Justin London},
   editor =    {Thomas Christensen},
-  title =        {Rhythm in twentieth-century theory},
-  chapter =      {Theories of musical rhythm in the eighteenth and
-                  nineteenth centuries},
+  title =        {The Cambridge History of Western Music Theory},
+  chapter =      {Rhythm in twentieth-century theory},
   publisher =    {Cambridge University Press},
   year =         2002,
   address =   {Cambridge; New York},
   pages =     {695--725}
+}
+
+
+@InCollection{thiemel02:accent,
+  author =       {Matthias Thiemel},
+  title =        {Accent},
+  booktitle =    {Grove Music},
+  publisher = {Oxford University Press},
+  year =      2002,
+  editor =    {Laura Williams Macy},
+  annote =    {Disponível em \url{http://www.grovemusic.com/}}
 }
