Corrige tipo de entrada

--- a/music-tempo.bib
+++ b/music-tempo.bib
@@ -1,10 +1,10 @@
 
-@InBook{caplin02:theories,
+@InCollection{caplin02:theories,
   author =    {William E. Caplin},
   editor =    {Thomas Christensen},
-  title =        {The Cambridge History of Western Music Theory},
-  chapter =      {Theories of musical rhythm in the eighteenth and
+  title =      {Theories of musical rhythm in the eighteenth and
                   nineteenth centuries},
+  booktitle =        {The Cambridge History of Western Music Theory},
   publisher =    {Cambridge University Press},
   year =         2002,
   address =   {Cambridge; New York},
@@ -37,17 +37,16 @@
   annote =    {Disponível em \url{http://www.grovemusic.com/}}
 }
 
-@InBook{london02:rhythm-1,
+@InCollection{london02:rhythm-1,
   author =    {Justin London},
   editor =    {Thomas Christensen},
-  title =        {The Cambridge History of Western Music Theory},
-  chapter =      {Rhythm in twentieth-century theory},
+  title =      {Rhythm in twentieth-century theory},
+  booktitle =        {The Cambridge History of Western Music Theory},
   publisher =    {Cambridge University Press},
   year =         2002,
   address =   {Cambridge; New York},
   pages =     {695--725}
 }
-
 
 @InCollection{thiemel02:accent,
   author =       {Matthias Thiemel},
