Atualiza pacote para sbcm

--- a/latex/sbc2003.sty
+++ b/latex/sbc2003.sty
@@ -3,12 +3,12 @@
 % Created by Jomi & Rafael, june 2001
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{sbc2002}[2001/06/09]
+\ProvidesPackage{sbc2003}[2001/06/09]
 
 % margem sup 3.5 cm: há 1,5 cm para header, + 2 cm para top
 % margem inf 2.5 cm: há 1,5 cm para foot, + 1 cm para bottom
 % margem esq/dir 3 cm
-\RequirePackage[a4paper,top=3.5cm,left=3cm,right=3cm,bottom=2.5cm]{geometry}
+\RequirePackage[a4paper,top=2cm,left=3cm,right=3cm,bottom=1.5cm]{geometry}
 
 
 \parindent 1.27cm
@@ -17,7 +17,7 @@
 \flushbottom
 
 % captions
-\RequirePackage[bf,sf,footnotesize,hang]{caption2}
+\RequirePackage[bf,sf,footnotesize,hang]{caption}
 \setlength{\captionmargin}{0.8cm}
 \renewcommand{\captionfont}{\sffamily\footnotesize\bfseries}
 
