--- a/music-tempo.bib
+++ b/music-tempo.bib
@@ -27,6 +27,13 @@
   address =   {Chicago}
 }
 
+@Book{lerdahl.ea83,
+  author =    {Fred Lerdahl and Ray S. Jackendoff},
+  title =        {A generative theory of tonal music},
+  publisher =    {MIT Press},
+  year =         1983,
+  address =   {Cambridge, MA and London}}
+
 @InCollection{london02:rhythm,
   author =       {Justin London},
   title =        {Rhythm},
