Insere huron e thomassen
* acento melódico e contorno

--- a/melodic-contour.bib
+++ b/melodic-contour.bib
@@ -215,6 +215,17 @@
   file          = {hanninen01:orientations}
 }
 
+@article{         huron.ea96:melodic,
+  title         = {What is melodic accent? Converging evidence from
+                  musical practice},
+  author        = {David Huron and Matthew Royal},
+  journal       = {Music Perception},
+  volume        = {13},
+  pages         = {489--516},
+  year          = {1996},
+  publisher     = {University of California Press}
+}
+
 @PhDThesis{       ishiyama96:application,
   author        = {Ishiyama, M.},
   title         = {The Application of Contour Theories to Roger Sessions's
@@ -701,3 +712,14 @@
                   convivência de técnicas tradicionais com gestos musicais
                   característicos do século XX.}
 }
+
+@Article{         thomassen82:melodic,
+  author        = {Joseph Thomassen},
+  title         = {Melodic accent: Experiments and a tentative model},
+  journal       = {Journal of the Acoustical Society of America},
+  year          = 1982,
+  volume        = 71,
+  number        = 6,
+  pages         = {1598--1605}
+}
+
