--- a/coding.bib
+++ b/coding.bib
@@ -41,6 +41,6 @@
 @Unpublished{pullinger.ea07:computer,
   author =       {Stuart Pullinger and Nicholas Bailey and Graham Hair},
   title =        {A Computer Representation of Pitch Based on the Spiral of Fifths},
-  note =         {This is a pdf presentation available at the internet},
-  url =          {www.n-ism.org/Papers/Nick_Bailey/spiral5ths_slides.pdf},
+  note =         {This is a pdf presentation available on the internet},
+  url =          {www.n-ism.org/Papers/Nick\_Bailey/spiral5ths\_slides.pdf},
   year =      2007}
